--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.10"
 prompt = "^0.4.1"
+black = "^24.8.0"
 
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core"]
